--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="card">
             <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
             <p id="wish" style="font-size: 18px; line-height: 1.8; color: #333;"></p>
-            <div style="font-size: 35px; margin-top: 20px;">🧧🌸🧨🌼</div>
+            <div style="font-size: 35px; margin-top: 20px;">🧧🌸🧨</div>
         </div>
     </div>
 
@@ -178,9 +178,9 @@
 
     <script>
         const wishes = [
-            "Chúc bạn năm mới vạn sự như ý, học hành tấn tới, thi cử đỗ đạt!",
-            "Chúc mừng năm mới Bính Ngọ! Bình an, hạnh phúc, học tập thành công.",
-            "Năm mới rạng rỡ, gặt hái thành công rực rỡ trên mọi lĩnh vực!"
+            "Mừng xuân mới, chúc bạn mỗi trang sách mở ra là một chân trời tri thức, mỗi bước chân đi tới là một hành trình hạnh phúc, công danh thăng tiến và đời sống an nhiên.",
+            "Năm mới chúc bạn dồi dào cảm hứng để chinh phục những đỉnh cao học thuật, nhưng cũng đừng quên dành thời gian để lắng nghe nhịp đập cuộc sống, viết nên một chương mới vừa thành đạt vừa ấm áp yêu thương.",
+            "Chúc bạn năm mới trí tuệ sáng suốt, gặt hái thêm nhiều kiến thức mới, đồng thời luôn giữ được tâm thế bình  để tận hưởng trọn vẹn từng khoảnh khắc rực rỡ của cuộc đời."
         ];
 
         function openCard() {
